# TTS-MacOS

./: .gitignore  ACTUALIZACION-MCP-CLI.md  BUGFIX-VOCES-v1.2.1.md  CLAUDE.md  COMANDOS-RAPIDOS.sh  GUIA-COMPLETA-v1.1.md  INSTRUCCIONES-INSTALACION.md  LEEME-PRIMERO.md  NOVEDADES-v1.1.txt  NOVEDADES-v1.2.txt  Nuevo_tts.md  README.md  RESUMEN-FINAL-v1.2.md  RESUMEN-VISUAL.txt  configuracion-global-mcp-tts-notify.md  implement_v3.md  install-zed-mcp.sh  test-zed-mcp.py  zed-mcp-server.py
.claude/hooks/: ACTUALIZACION-VOCES.md  EJEMPLOS.md  INICIO-RAPIDO.md  README.md  RESUMEN-FINAL.md  RESUMEN-HOOKS.txt  RUN-TESTS.md  VERIFICACION-FINAL.sh  VOCES-SIRI.md  demo-plans.sh  demo.sh  enable-tts.sh  list-all-voices.sh  notification.py  plan-reader.py  post-response  test-hooks.sh  test-integration.sh  test-quick.sh  test-siri-voices.sh  test-voices.sh  user-prompt-submit
TTS_Notify/: CHANGELOG-v2.md  CLAUDE.md  LICENSE  MIGRATION-GUIDE-v2.md  README-v2.md  README.md  mcp_diagnostic.py  pyproject.toml  requirements.txt
TTS_Notify/config/: default.yaml  profiles.yaml
TTS_Notify/docs/: INSTALLATION.md  USAGE.md  VOICES.md
TTS_Notify/documentation/: INSTALLATION.md  USAGE.md  VOICES.md
TTS_Notify/installers/: install-cli.sh  install-mcp-claude-code.sh  install-mcp.sh  install.bat  install.ps1  install.sh
TTS_Notify/src/: __init__.py  cli.py  mcp_server.py
TTS_Notify/src/installer/: __init__.py  installer.py
TTS_Notify/src/tts_notify/: __init__.py  __main__.py  main.py
TTS_Notify/src/tts_notify/core/: __init__.py  audio_pipeline.py  config_manager.py  coqui_engine.py  exceptions.py  installer.py  models.py  tts_engine.py  voice_cloner.py  voice_system.py
TTS_Notify/src/tts_notify/plugins/: __init__.py
TTS_Notify/src/tts_notify/ui/: __init__.py
TTS_Notify/src/tts_notify/ui/api/: __init__.py  __main__.py  server.py
TTS_Notify/src/tts_notify/ui/cli/: __init__.py  __main__.py  main.py
TTS_Notify/src/tts_notify/ui/mcp/: __init__.py  __main__.py  enhanced_server.py  server.py  simple_server.py  stdio_server.py  sync_stdio_server.py
TTS_Notify/src/tts_notify/utils/: __init__.py  async_utils.py  file_manager.py  logger.py  system_detector.py  text_normalizer.py
TTS_Notify/tests/: __init__.py  conftest.py
mcp-tts-macos/: .gitignore  CHANGELOG-1.4.1.md  CHANGELOG-FIXES.md  CHANGELOG-MEJORAS.md  CHANGELOG.md  CLAUDE.md  CLI-GUIDE.md  CORRECCIONES.md  QUICK-START.md  QUICKSTART.md  README.md  RESUMEN-VOCES-SIRI.md  SIRI-VOICES-GUIDE.md  SOLUCION-VOCES.md  TROUBLESHOOTING.md  UVX-GUIDE.md  UVX-NOTE.md  claude_desktop_config.example.json  debug_mcp.py  debug_mcp_detailed.py  diagnostico-voces.py  examples.sh  install-cli.sh  install.sh  new_tools.py  pyproject.toml  server.py  server_fastmcp.py  setup.py  start_server.py  test-instalacion.sh  test_tts.py  tts-macos  tts-macos-standalone  tts-macos-standalone.py
mcp-tts-macos/src/tts_macos/: __init__.py  __main__.py  cli.py
v2/: .gitignore  COMO-USAR-COQUI.md  COQUI-TTS-GUIDE.md  MCP-CONFIGURATION.md  MIGRATION.md  QUICK-START.md  README.md  STATUS-AND-MODELS.md  USAGE-GUIDE.md  __init__.py  demo.sh  generate_mcp_json.py  install-deps.sh  install-mcp  install-mcp.sh  install-simple.sh  install-smart-v2.sh  install.sh  mcp_config_tool.py  mcp_installer.py  mcp_server_v2.py  pyproject.toml  requirements.txt
v2/cli/: __init__.py  main.py
v2/core/: config.py  smart_features.py
v2/engines/: __init__.py  ai_engine.py  native.py  selector.py
v2/legacy/: __init__.py  cli.py  server.py  voice_detector.py
zed/hooks/: README.md  disable-tts.sh  enable-tts.sh  file-save-complete  startup-complete  task-complete
