[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tts-notify"
version = "1.5.0"
description = "Text-to-Speech notification system for macOS using native TTS engine"
readme = "documentation/README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["tts", "text-to-speech", "macos", "voice", "speech", "audio", "cli", "mcp", "notifications"]
authors = [
    { name = "TTS Notify Project" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
    "Topic :: Office/Business :: Notification",
]

dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://github.com/yourusername/tts-notify"
Repository = "https://github.com/yourusername/tts-notify"
Documentation = "https://github.com/yourusername/tts-notify#readme"
Issues = "https://github.com/yourusername/tts-notify/issues"

[project.scripts]
tts-notify = "cli:main"
tts = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/documentation",
    "/installers",
    "/LICENSE",
]