[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tts-macos"
version = "1.4.4"
description = "Text-to-Speech para macOS usando TTS nativo - CLI y servidor MCP"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["tts", "text-to-speech", "macos", "voice", "speech", "audio", "cli", "mcp"]
authors = [
    { name = "TTS macOS Project" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://github.com/yourusername/tts-macos"
Repository = "https://github.com/yourusername/tts-macos"
Documentation = "https://github.com/yourusername/tts-macos#readme"
Issues = "https://github.com/yourusername/tts-macos/issues"

[project.scripts]
tts-macos = "tts_macos.cli:main"
tts = "tts_macos.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tts_macos"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
