# TTS-MacOS v2 - Development Dependencies

# Core Framework
mcp>=1.0.0
fastmcp>=0.2.0

# AI TTS Engine
TTS>=0.22.0
torch>=2.0.0
torchaudio>=2.0.0

# Audio Processing
soundfile>=0.12.0
librosa>=0.10.0

# Configuration & Validation
pydantic>=2.0.0

# Platform Specific
libsndfile; sys_platform == "darwin"
espeak-ng; sys_platform == "linux"

# Testing
pytest>=7.0.0
pytest-asyncio>=0.21.0

# Development Tools
black>=23.0.0
flake8>=6.0.0

[project]
name = "tts-macos-v2"
version = "2.0.0"
description = "Dual-engine TTS system with AI voice cloning"
authors = [
    {name = "TTS-MacOS Development Team", email = "dev@tts-macos.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.2.0",
    "TTS>=0.22.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
gpu = [
    "torch-audio",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
tts-macos-v2 = "v2.cli.main:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.setuptools.packages.find]
where = ["."]
include = ["v2*"]
